chore:added filter products
